// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package oidc.core.v1;

option go_package = "oidc/core/v1;corev1";

import "google/protobuf/wrappers.proto";

// https://www.rfc-editor.org/rfc/rfc6749.html#section-4.1.2.1
message Error {
  // REQUIRED. Error code.
  string err = 1;
  // OPTIONAL. Human-readable ASCII encoded text description of the error.
  string error_description = 2;
  // OPTIONAL. URI of a web page that includes additional information about the
  // error.
  google.protobuf.StringValue error_uri = 3;
  // OAuth 2.0 state value. REQUIRED if the Authorization Request included the
  // state parameter. Set to the value received from the Client.
  google.protobuf.StringValue state = 4;
}
