// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package oidc.client.v1;

import "oidc/client/v1/client.proto";
import "oidc/core/v1/error.proto";

option go_package = "oidc/client/v1;clientv1";

// -----------------------------------------------------------------------------

service ClientAuthenticationService {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

// https://tools.ietf.org/html/rfc7591
service ClientRegistrationService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

// -----------------------------------------------------------------------------

message AuthenticateRequest {
  optional string client_id = 1;
  optional string client_secret = 2;
  optional string client_assertion_type = 3;
  optional string client_assertion = 4;
}

message AuthenticateResponse {
  .oidc.core.v1.Error error = 1;
  Client client = 2;
}

// -----------------------------------------------------------------------------

// https://tools.ietf.org/html/rfc7591#section-2
message RegisterRequest {
  ClientMeta metadata = 1;
}

message RegisterResponse {
  .oidc.core.v1.Error error = 1;
  Client client = 2;
}
